h2 was changed to h3

--- a/MYWEB.html
+++ b/MYWEB.html
@@ -9,7 +9,7 @@
 
         <h1> Docker </h1>
         <h2> why I need to learn this?</h2>
-        <h2> the logo is cute</h2>>
+        <h3> But the logo is cute</h3>>
         <div>
             <div>
                 <img src="/image/docker.png" class="imgstyle">
