--- a/MYWEB.html
+++ b/MYWEB.html
@@ -5,11 +5,11 @@
         <title>This is my website</title>
         <link rel="stylesheet" href="/index.css">
     </head>
-    <body class=".centerit">
+    <body class="centerit">
 
         <h1> Docker </h1>
         <h2> why I need to learn this?</h2>
-        <h3> But the logo is cute</h3>>
+        <h3> But the logo is cute</h3>
         <div>
             <div>
                 <img src="/image/docker.png" class="imgstyle">
