--- a/MYWEB.html
+++ b/MYWEB.html
@@ -3,7 +3,7 @@
     <head>
         <meta charest="UTF-8">
         <title>This is my website</title>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body class="centerit">
 
@@ -12,7 +12,7 @@
 
         <div>
             <div>
-                <img src="/image/docker.png" class="imgstyle">
+                <img src="image/docker.png" class="imgstyle">
             </div>
         </div>
         <h2> But the logo is cute</h2>
